Fix the conflict between ForceBrowserSignin and ForceEphemeralProfiles policy.

When Chrome clean up ephemeral profiles during launch, create a new profile
if all profiles are deleted and last used profile is guest profile.

Bug: 823890
Change-Id: I64ff6b6230d73df9b97839b0d896fa56710b41e5
Reviewed-on: https://chromium-review.googlesource.com/974123
Commit-Queue: Owen Min <zmin@chromium.org>
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545104}
Former-commit-id: b052808737e66eb0f25c296b17ed24725a1002ac